# redmine-max-notifier

./: .env.example  .gitignore  .pre-commit-config.yaml  CLAUDE.md  LICENSE  README.md  STATE.md  alembic.ini  pyproject.toml  smoke_max.py  smoke_send.py
alembic/: env.py
alembic/versions/: b7eac8b24689_add_user_mapping_for_max_mentions.py  cbedaa48c0ce_add_notified_due_date_to_sent_.py  daf8eff117c4_create_initial_tables.py
certs/: ca_bundle.pem
cheatsheets/: README.md  mentions.md  operations.md  rmn.md  routing.md  templates.md
deploy/: redmine-max-notifier.service  rmn
scripts/: build_ca_bundle.py  check.sh  routing_cli.py  smoke_max.py  smoke_send.py  smoke_templates.py  trigger_due_date.py  user_mapping_cli.py
src/redmine_max_notifier/: __init__.py  config.py  dispatcher.py  jobs.py  name_resolver.py  poller.py  polling_state.py  renderer.py  routing.py  scheduler.py  sent_notifications.py  status_resolver.py  user_mapping.py
src/redmine_max_notifier/db/: __init__.py  base.py  engine.py  models.py
src/redmine_max_notifier/events/: __init__.py  models.py
src/redmine_max_notifier/maxbot/: client.py  exceptions.py  models.py
src/redmine_max_notifier/redmine/: client.py  exceptions.py  models.py
src/redmine_max_notifier/templates/: comment_added.md.j2  due_date_approaching.md.j2  issue_updated.md.j2  new_issue.md.j2  status_changed.md.j2
src/redmine_max_notifier/web/: __init__.py  app.py
src/redmine_max_notifier/web/routes/: __init__.py  health.py
tests/: conftest.py  test_config.py  test_dispatcher.py  test_jobs.py  test_poller.py  test_renderer.py  test_user_mapping.py
tests/db/: conftest.py  test_engine.py  test_polling_state.py  test_routing.py  test_routing_crud.py  test_sent_notifications.py
tests/events/: test_models.py
tests/fixtures/: issue_priorities.json  issue_single.json  issue_statuses.json  issue_with_journals.json  issues_page_1.json  issues_page_2.json  user_current.json
tests/maxbot/: conftest.py  test_client_errors.py  test_client_retries.py  test_client_success.py
tests/redmine/: test_client_errors.py  test_client_retries.py  test_client_success.py  test_name_resolver.py  test_status_resolver.py
tests/web/: conftest.py  test_health.py  test_scheduler_lifespan.py
