[project]
name = "redmine-max-notifier"
version = "0.1.0"
description = "Redmine notifier for messenger MAX, for D-TELEKOM Team, by 1eonardo9, with <3 =)"
readme = "README.md"
license = "MIT"
license-files = ["LICENSE"]
authors = [
    { name = "1eonardo9", email = "99250584+1eonardo9@users.noreply.github.com" }
]
requires-python = ">=3.12"
dependencies = [
    "httpx>=0.28.1",
]

[build-system]
requires = ["uv_build>=0.11.21,<0.12.0"]
build-backend = "uv_build"


# ================================================================
# Ruff линтер и форматтер
# ================================================================
[tool.ruff]
# Длина строки. 88 символов - стандарт black/ruff
line-length = 88
# Целевая версия Python - Ruff будет применять правила
target-version = "py312"


[tool.ruff.lint]
# Какие группы правил включаем (https://docs.astral.sh/ruff/rules/)
select = [
    "E",      # pycodestyle errors
    "W",      # pycodestyle warnings
    "F",      # pyflakes
    "I",      # isort (импорты)
    "N",      # pep8-naming
    "UP",     # pyupgrade
    "B",      # flake8-bugbear
    "C4",     # flake8-comprehensions
    "SIM",    # flake8-simplify
    "ASYNC",  # flake8-async — важно для нашего async-проекта
    "RUF",    # ruff-specific
]

# Что игнорируем глобально
ignore = []

[tool.ruff.lint.per-file-ignores]
# В тестах разрешаем некоторые вольности
"tests/**/*.py" = [
    "S101",    # use of assert (в тестах он нужен!)
    "ARG",     # unused arguments (фикстуры pytest часто такие)
]

[tool.ruff.lint.isort]
# Свой пакет считается first-party — будет в отдельной группе импортов
known-first-party = ["redmine_max_notifier"]

[tool.ruff.format]
# Двойные кавычки — стандарт. Можно "single", но двойные — конвенция black/ruff.
quote-style = "double"
# Пробелы для отступов (а не табы)
indent-style = "space"


# ============================================================================
# mypy — статический type checker
# ============================================================================
[tool.mypy]
python_version = "3.12"
# strict = true включает разом ~10 строгих флагов. См. документацию mypy.
strict = true
# Красивый вывод ошибок с подсветкой
pretty = true
show_error_codes = true
# Сообщать о неиспользуемых # type: ignore
warn_unused_ignores = true
# Где искать исходники
files = ["src", "tests"]

# Для сторонних библиотек без type stubs — не падать, а предупреждать
[[tool.mypy.overrides]]
module = ["tests.*"]
# В тестах чуть мягче — например, фикстуры с *args/**kwargs
disallow_untyped_decorators = false

[dependency-groups]
dev = [
    "mypy>=2.1.0",
    "pre-commit>=4.6.0",
    "ruff>=0.15.20",
]
