[project]
name = "redmine-max-notifier"
version = "0.1.0"
description = "Redmine notifier for messenger MAX, for D-TELEKOM Team, by 1eonardo9, with <3 =)"
readme = "README.md"
license = "MIT"
license-files = ["LICENSE"]
authors = [
    { name = "1eonardo9", email = "99250584+1eonardo9@users.noreply.github.com" }
]
requires-python = ">=3.12"
dependencies = [
    "aiosqlite>=0.22.1",
    "alembic>=1.18.5",
    "apscheduler>=3.10,<4",
    "fastapi>=0.139.0",
    "httpx>=0.28.1",
    "jinja2>=3.1.6",
    "pydantic>=2.13.4",
    "pydantic-settings>=2.14.2",
    "python-dotenv>=1.2.2",
    "sqlalchemy>=2.0",
    "uvicorn[standard]>=0.51.0",
]

[build-system]
requires = ["uv_build>=0.11.21,<0.12.0"]
build-backend = "uv_build"


# ================================================================
# Ruff линтер и форматтер
# ================================================================
[tool.ruff]
# Длина строки. 88 символов - стандарт black/ruff
line-length = 88
# Целевая версия Python - Ruff будет применять правила
target-version = "py312"


[tool.ruff.lint]
# Какие группы правил включаем (https://docs.astral.sh/ruff/rules/)
select = [
    "E",      # pycodestyle errors
    "W",      # pycodestyle warnings
    "F",      # pyflakes
    "I",      # isort (импорты)
    "N",      # pep8-naming
    "UP",     # pyupgrade
    "B",      # flake8-bugbear
    "C4",     # flake8-comprehensions
    "SIM",    # flake8-simplify
    "ASYNC",  # flake8-async — важно для нашего async-проекта
    "RUF",    # ruff-specific
]

# Что игнорируем глобально
ignore = [
    "RUF001",  # ambiguous unicode in strings (мешает русским литералам)
    "RUF002",  # ambiguous unicode in docstrings (мешает русским docstring)
    "RUF003",  # ambiguous unicode in comments (мешает русским комментариям)
    "ASYNC109",  # разрешаем параметр timeout в HTTP-клиенте (передаётся в httpx)
]

[tool.ruff.lint.per-file-ignores]
# В тестах разрешаем некоторые вольности
"tests/**/*.py" = [
    "S101",    # use of assert (в тестах он нужен!)
    "ARG",     # unused arguments (фикстуры pytest часто такие)
]
# Smoke-скрипты — одноразовые CLI-разведчики, а не прод-код.
# Блокирующий pathlib в них допустим: event loop живёт секунды,
# оптимизировать I/O нет смысла.
"smoke_*.py" = [
    "ASYNC240",
]

[tool.ruff.lint.isort]
# Свой пакет считается first-party — будет в отдельной группе импортов
known-first-party = ["redmine_max_notifier"]

[tool.ruff.format]
# Двойные кавычки — стандарт. Можно "single", но двойные — конвенция black/ruff.
quote-style = "double"
# Пробелы для отступов (а не табы)
indent-style = "space"


# ============================================================================
# mypy — статический type checker
# ============================================================================
[tool.mypy]
python_version = "3.12"
# strict = true включает разом ~10 строгих флагов. См. документацию mypy.
strict = true
# Красивый вывод ошибок с подсветкой
pretty = true
show_error_codes = true
# Сообщать о неиспользуемых # type: ignore
warn_unused_ignores = true
# Где искать исходники
files = ["src", "tests"]
mypy_path = "src"
explicit_package_bases = true

# Для сторонних библиотек без type stubs — не падать, а предупреждать
[[tool.mypy.overrides]]
module = ["tests.*"]
# В тестах чуть мягче — например, фикстуры с *args/**kwargs
disallow_untyped_decorators = false

# APScheduler 3.x не поставляется с py.typed и не имеет пакета
# types-APScheduler на PyPI. Библиотека стабильна и хорошо документирована,
# но для mypy её содержимое — чёрный ящик. Явно разрешаем импорт без стабов;
# сигнатуры add_job/start/shutdown стабильные, ловить регрессии от них
# статически не рассчитываем.
[[tool.mypy.overrides]]
module = ["apscheduler.*"]
ignore_missing_imports = true

[dependency-groups]
dev = [
    "mypy>=2.1.0",
    "pre-commit>=4.6.0",
    "pytest>=9.1.1",
    "pytest-asyncio>=1.4.0",
    "pytest-cov>=7.1.0",
    "pytest-httpx>=0.36.2",
    "ruff>=0.15.20",
]


# ============================================================================
# pytest — тестовый фреймворк
# ============================================================================
[tool.pytest.ini_options]
# Где искать тесты
testpaths = ["tests"]
# Режим asyncio: auto = каждая async def test_ автоматически считается async-тестом,
# без необходимости вешать @pytest.mark.asyncio на каждый.
asyncio_mode = "auto"
# Полезные флаги по умолчанию:
# -ra  — показывать краткий summary по всем не-passed тестам
# --strict-markers — падать, если использован незарегистрированный маркер (защита от опечаток)
# --strict-config  — падать на кривой конфиг pytest
addopts = "-ra --strict-markers --strict-config"
# Формат имён файлов/классов/функций, которые pytest считает тестами
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
